--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "debug": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "stylelint": "stylelint \"**/*.css\" --fix"
   },
   "dependencies": {
     "next": "12.0.6",
@@ -13,7 +15,16 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "eslint": "8.4.0",
-    "eslint-config-next": "12.0.6"
+    "@types/node": "^16.11.11",
+    "@types/react": "^17.0.37",
+    "@typescript-eslint/eslint-plugin": "^5.5.0",
+    "@typescript-eslint/parser": "^5.5.0",
+    "eslint": "^8.4.0",
+    "eslint-config-next": "12.0.6",
+    "stylelint": "^12.0.1",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-order": "^4.1.0",
+    "stylelint-order-config-standard": "^0.1.3",
+    "typescript": "^4.5.2"
   }
 }
