--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "stylelint": "stylelint \"**/*.css\" --fix"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
     "next": "12.0.6",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.1.2",
+    "@types/classnames": "^2.3.1",
     "@types/node": "^16.11.11",
     "@types/react": "^17.0.37",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
